--- a/CSS/user-profile.css
+++ b/CSS/user-profile.css
@@ -48,8 +48,9 @@
 
 }
 .tasks{
-    max-width: 824px;
-    width: 50%;
+    margin-right: 1%;
+    margin-top: 1%;
+    width: 49.5%;
     min-height: 508px;
     height: auto;
 
@@ -66,6 +67,7 @@
 }
 .tasks_title{
     font-size: 32px;
+    font-weight: 500;
 
 }
 .tasks_row{
@@ -76,7 +78,8 @@
 }
 .tasks_col{
     width: 50%;
-    font-size: 15px;
+    font-weight: 500;
+    font-size: 20px;
     color: #2b2b2b;
 }
 .tests{
@@ -106,11 +109,13 @@
     align-items: center;
     transition: 0.25s;
     cursor: pointer;
+    font-weight: 300;
+    font-size: 37px;
+    color: #ED1C24;
     border-radius: 10px;
 }
 .test_name{
     padding-left: 10px;
-    padding-top: 5px;
     display: flex;
     flex-direction: column;
 
@@ -119,8 +124,9 @@
     display: flex;
     justify-content: start;
     align-items: center;
-
-
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
 }
 
 .test_go:hover{
@@ -133,14 +139,20 @@
 }
 
 .test_title{
-
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
 }
 .test_subtitle{
-
+    font-weight: 400;
+    font-size: 15px;
+    color: #929292;
 }
 .results{
-    max-width: 824px;
-    width: 50%;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    margin-right: 1%;
+    width: 49.5%;
     min-height: 508px;
     height: auto;
 
@@ -156,7 +168,8 @@
     border-radius: 30px;
 }
 .results_name{
-
+    font-size: 32px;
+    font-weight: 500;
 }
 .results_row{
     width: 100%;
@@ -164,10 +177,55 @@
     justify-content: space-between;
 }
 .results_col{
-
-    font-size: 15px;
+    font-weight: 500;
+    font-size: 20px;
     color: #2b2b2b;
 }
+
+.result_col{
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
+}
+
+.result_col_name{
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
+}
+
+.result_col_subtitle{
+    font-weight: 400;
+    font-size: 15px;
+    color: #929292;
+}
+
+.result_col_data{
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
+}
+
+.result_col_answers{
+    padding-right: 50px;
+    display: flex;
+    flex-direction: column;
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
+    padding-left: 95px;
+}
+
+.result_col_questions{
+    padding-left: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #2B2B2B;
+}
+
 .result{
     width: 100%;
     min-height: 59px;
@@ -178,4 +236,75 @@
     justify-content: space-between;
     transition: .25s;
     align-items: center;
+}
+
+.podraz_results{
+    float: right;
+    width: 49.5%;
+    min-height: 1034px;
+    height: auto;
+    padding-left: 48px;
+    padding-top: 20px;
+    padding-right: 48px;
+    padding-bottom: 20px;
+    background-color: #efefef;
+    border: 1px solid #dadada;
+    border-radius: 30px;
+}
+
+.podraz_name{
+    color: #717070;
+    font-weight: 500;
+    font-size: 24px;
+}
+.podraz_title{
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.podraz_color_1{
+    color:red;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.podraz_color_2{
+    color: blue;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.podraz_color_3{
+    color: green;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.podraz_color_4{
+    color: plum;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.name{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.surname{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.podraz_diagrama{
+    display: flex;
+    justify-content: center;
+    height: 761px;
+    align-items: center;
+}
+.diagrama{
+    width: 500px;
+    height: 500px;
+    background-color: plum;
+    border-radius: 50%;
 }
