--- a/CSS/login.css
+++ b/CSS/login.css
@@ -39,7 +39,7 @@ color: #FF0202;
     border: 0px;
     border-bottom:1px solid black;
     border-radius: 5px;
-    cursor: pointer;
+    cursor: text;
 
 }
 .login-block button{
