--- a/CSS/user-profile.css
+++ b/CSS/user-profile.css
@@ -128,6 +128,10 @@
     font-size: 20px;
     color: #2B2B2B;
 }
+.test:hover{
+    background-color: #E8E8E8;
+    border:1px solid #E8E8E8;
+}
 
 .test_go:hover{
     background-color: #D64A4A;
